# VKR

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: DataStructure.hpp  initialize_structure.h
src/: initialize_structure.cpp  main.cpp  my_data_structure.cpp
